Dynamically determine the project name.

--- a/.github/workflows/rustdoc.yml
+++ b/.github/workflows/rustdoc.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 env:
-  PROJECT_NAME: jtex
+  PROJECT_NAME: ${{ github.event.repository.name }}
   CARGO_TERM_COLOR: always
 
 permissions:
