--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,5 @@ keywords = []
 [dependencies]
 byteorder = "1.4"
 image = "0.24"
-nintendo-lz = { git = "https://gitlab.com/zedseven/nintendo-lz.git", branch = "split-library-binary" }
+nintendo-lz = { git = "https://gitlab.com/zedseven/nintendo-lz", branch = "split-library-binary" }
 thiserror = "1.0"
