--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ keywords = []
 
 [dependencies]
 byteorder = "1.4"
-image = "0.24"
+image = { version = "0.24", default-features = false }
 nintendo-lz = { git = "https://gitlab.com/zedseven/nintendo-lz", branch = "split-library-binary" }
 thiserror = "1.0"
